--- a/solar.css
+++ b/solar.css
@@ -32,11 +32,11 @@ body {
 width: 100%;    /* This makes the image responsive */
 height: auto;   /* Preserves aspect ratio */
 object-fit: cover; /* Ensures the image covers the container */
-max-height: 450px;
+max-height: 600px;
 max-width: 100vw; /* Limits the height if you want */
 }
 .carousel-item {
-height: 450px;  /* Set a fixed height for the carousel */
+height: 600px;  /* Set a fixed height for the carousel */
 }
 
 .carousel-item img {
@@ -178,3 +178,20 @@ footer{
 #contactme{
   margin-bottom: 0;
 }
+#services{
+  padding-top: 25px;
+}
+#achivements{
+  padding-top: 25px;
+}
+#clients{
+  padding-top: 25px;
+}
+#gallery{
+  padding-top:25px;
+}
+#contactus{
+  background-color: black;
+  padding-top: 20px;
+}
+
