--- a/solar.css
+++ b/solar.css
@@ -34,6 +34,7 @@ body {
  }
  
   .carousel-item img {
+      margin-top: 10px;
 width: 100%;    /* This makes the image responsive */
 height: auto;   /* Preserves aspect ratio */
 object-fit: cover; /* Ensures the image covers the container */
@@ -45,6 +46,7 @@ height: 600px;  /* Set a fixed height for the carousel */
 }
 
 .carousel-item img {
+margin-top:40px;
 height: 100%;   /* Make the image cover the height */
 width: auto;
 max-width: 100vw;
