--- a/solar.css
+++ b/solar.css
@@ -13,6 +13,7 @@ body {
     padding:0;
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
 }
 
 
@@ -28,13 +29,16 @@ body {
     border-bottom: 2px solid blue;
     
   }
-.navbar{
+ .navbar{
   margin:0;
   padding:10px;
  }
+ .navbar-toggler{
+  margin-right:80px;
+ }
  
   .carousel-item img {
-      margin-top: 10px;
+    margin-top: 10px;
 width: 100%;    /* This makes the image responsive */
 height: auto;   /* Preserves aspect ratio */
 object-fit: cover; /* Ensures the image covers the container */
@@ -201,4 +205,3 @@ footer{
   background-color: black;
   padding-top: 20px;
 }
-
